--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ html > body {
 .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[7];
-      grid-template-columns: repeat(7, 1fr);
+  -ms-grid-columns: (minmax(4em, 1fr))[7];
+      grid-template-columns: repeat(7, minmax(4em, 1fr));
   -ms-grid-rows: auto;
       grid-template-rows: auto;
 }
@@ -17,6 +17,15 @@ header {
   -ms-grid-column: 1;
   -ms-grid-column-span: 7;
   grid-column: 1 / 8;
+  padding: 10px;
+}
+
+.month {
+  text-align: center;
+}
+
+.month-spacer {
+  grid-column: span 3;
 }
 
 .dayname {
@@ -24,7 +33,12 @@ header {
 }
 
 .day {
+  min-height: 100px;
   text-align: left;
+}
+
+h4 {
+  margin: 0.25em;
 }
 
 .currentday {
