--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ html > body {
 .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(4em, 1fr))[7];
-      grid-template-columns: repeat(7, minmax(4em, 1fr));
+  -ms-grid-columns: (minmax(6em, 1fr))[7];
+      grid-template-columns: repeat(7, minmax(6em, 1fr));
   -ms-grid-rows: auto;
       grid-template-rows: auto;
 }
@@ -33,7 +33,7 @@ header {
 }
 
 .day {
-  min-height: 100px;
+  min-height: 6em;
   text-align: left;
 }
 
