--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,14 @@ html > body {
       grid-template-columns: repeat(7, minmax(6em, 1fr));
   -ms-grid-rows: auto;
       grid-template-rows: auto;
+  grid-gap: 2px;
 }
 
 header {
   -ms-grid-column: 1;
   -ms-grid-column-span: 7;
   grid-column: 1 / 8;
-  padding: 10px;
+  padding: 0 20px;
 }
 
 .month {
@@ -33,8 +34,14 @@ header {
 }
 
 .day {
+  background-color: #B9B6B8;
   min-height: 6em;
   text-align: left;
+}
+
+.empty {
+  background-color: #EBEAEB;
+  color: #878287;
 }
 
 h4 {
