--- a/css/style.scss
+++ b/css/style.scss
@@ -8,11 +8,12 @@ html > body {
   display: grid;
   grid-template-columns: repeat(7, minmax(6em, 1fr));
   grid-template-rows: auto;
+  grid-gap: 2px;
 }
 
 header {
   grid-column: 1 / 8;
-  padding: 10px;
+  padding: 0 20px;
 }
 
 .month {
@@ -28,8 +29,14 @@ header {
 }
 
 .day {
+  background-color: #B9B6B8;
   min-height: 6em;
   text-align: left;
+}
+
+.empty {
+  background-color: #EBEAEB;
+  color: #878287;
 }
 
 h4 {
