--- a/css/style.scss
+++ b/css/style.scss
@@ -39,14 +39,24 @@ header {
   text-align: left;
 }
 
+.day:hover {
+  background-color: #E3DFFF;
+}
+
 .empty {
   background-color: #EBEAEB;
   color: #878287;
+  min-height: 6em;
+  text-align: left;
 }
 
 .currentday {
   background-color: #7BE0D6;
   text-align: left;
+}
+
+.currentday:hover {
+  background-color: #E3DFFF;
 }
 
 h4 {
