--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,30 @@ html > body {
 
 header {
   grid-column: 1 / 8;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: auto;
+}
+
+.title {
+  grid-column: 1 / 3;
   padding: 0 20px;
+}
+
+.dateform {
+  text-align: center;
+  align-self: center;
+  justify-self: end;
+  padding: 0 20px;
+  grid-column: 3 / 8;
+}
+
+.dateform fieldset {
+  display: inline;
+}
+
+.dateform label {
+  margin: 0.25em;
 }
 
 .month {
